Add servo functions
Signed-off-by: Benedikt Spranger <b.spranger@linutronix.de>

--- a/Makefile.am
+++ b/Makefile.am
@@ -3,13 +3,17 @@ SUBDIRS = po
 pkgconfigdir = $(libdir)/pkgconfig
 pkgconfig_DATA = libbbmotor.pc
 
-bin_PROGRAMS = stepper
+bin_PROGRAMS = stepper testservo
 stepper_SOURCES = stepper.c
 stepper_CFLAGS = -O3 -Wall -Wextra -Werror -g
 stepper_LDADD = libbbmotor.la
 
+testservo_SOURCES = testservo.c
+testservo_CFLAGS = -O3 -Wall -Wextra -Werror -g
+testservo_LDADD = libbbmotor.la
+
 lib_LTLIBRARIES = libbbmotor.la
-libbbmotor_la_SOURCES = core.c gpio.c i2c.c motor.c com.h internal.h
+libbbmotor_la_SOURCES = core.c gpio.c i2c.c motor.c servo.c com.h internal.h
 libbbmotor_la_CFLAGS = -O2 -Wall -Wextra @GPIO_CFLAGS@
 libbbmotor_la_LIBADD = @GPIO_LIBS@
 include_HEADERS = bbmotor.h
