--- a/Makefile.am
+++ b/Makefile.am
@@ -14,7 +14,7 @@ testservo_LDADD = libbbmotor.la
 
 lib_LTLIBRARIES = libbbmotor.la
 libbbmotor_la_SOURCES = core.c gpio.c i2c.c motor.c servo.c com.h internal.h
-libbbmotor_la_CFLAGS = -O2 -Wall -Wextra @GPIO_CFLAGS@
+libbbmotor_la_CFLAGS = -O2 -Wall -Wextra @GPIO_CFLAGS@ -fvisibility=hidden
 libbbmotor_la_LIBADD = @GPIO_LIBS@
 include_HEADERS = bbmotor.h
 
