--- a/Makefile.am
+++ b/Makefile.am
@@ -6,11 +6,11 @@ pkgconfig_DATA = libbbmotor.pc
 bin_PROGRAMS = stepper testservo
 
 stepper_SOURCES = stepper.c stepper.1
-stepper_CFLAGS = -O3 -Wall -Wextra -Werror -g
+stepper_CFLAGS = -O3 -Wall -Wextra -Werror -g -DLOCALEDIR='"$(localedir)"'
 stepper_LDADD = libbbmotor.la
 
 testservo_SOURCES = testservo.c testservo.1
-testservo_CFLAGS = -O3 -Wall -Wextra -Werror -g
+testservo_CFLAGS = -O3 -Wall -Wextra -Werror -g -DLOCALEDIR='"$(localedir)"'
 testservo_LDADD = libbbmotor.la
 
 lib_LTLIBRARIES = libbbmotor.la
