Add missing package to .travis
The recently added locking depend on the pthread library. The predifined
autoconf check for pthreads AX_PTREAD is part of autoconf-archive, which
is missing in the .travis config. Add missing package autoconf-archive.

Signed-off-by: Benedikt Spranger <b.spranger@linutronix.de>

--- a/.travis.yml
+++ b/.travis.yml
@@ -1,7 +1,7 @@
 dist: bionic
 
 before_install:
-  - sudo apt-get install -y autopoint doxygen libgpiod-dev
+  - sudo apt-get install -y autoconf-archive autopoint doxygen libgpiod-dev
 addons:
   apt:
     update: true
