No need for root
Building libbbmotor does not require additional rights to build.
Tag the package accordingly.

--- a/debian/control
+++ b/debian/control
@@ -3,6 +3,7 @@ Priority: optional
 Maintainer: Benedikt Spranger <b.spranger@linutronix.de>
 Build-Depends: debhelper (>= 12.0.0), autoconf-archive, libgpiod-dev, pkg-config
 Standards-Version: 4.4.0
+Rules-Requires-Root: no
 Homepage: https://github.com/eurovibes/libbbmotor
 Vcs-Git: https://github.com/eurovibes/libbbmotor.git
 Vcs-browser: https://github.com/eurovibes/libbbmotor
