--- a/debian/control
+++ b/debian/control
@@ -1,7 +1,7 @@
 Source: libbbmotor
 Priority: optional
 Maintainer: Benedikt Spranger <b.spranger@linutronix.de>
-Build-Depends: debhelper (>= 12.0.0), autoconf-archive, libgpiod-dev, pkg-config
+Build-Depends: debhelper (>= 12.0.0), autoconf-archive, libgpiod-dev, pkg-config, debhelper-compat (= 12)
 Standards-Version: 4.4.1
 Rules-Requires-Root: no
 Homepage: https://github.com/eurovibes/libbbmotor
